# S_tructures

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  S_tructures.h  tests.c
include/: S_tructures.h
src/: example.c  static.c  tests.c
